--- a/frontend/src/main/scss/app/menu/layout/_portrait.scss
+++ b/frontend/src/main/scss/app/menu/layout/_portrait.scss
@@ -47,7 +47,6 @@
       #navigation-menu {
         a {
           display: block;
-          width: 100%;
           padding: 1rem 2rem;
           box-sizing: border-box;
         }
@@ -100,6 +99,7 @@
 
     label {
       padding: 1rem;
+      @include align-self(center);
 
       span {
         vertical-align: middle;
@@ -108,13 +108,14 @@
 
     h1 {
       @include flex-grow(1);
-      margin: 0;
+      margin: 0 3rem 0 0;
+      padding: 0;
       text-align: center;
 
       a {
         display: block;
         padding: 1rem;
-        margin: 0 2rem 0 0;
+        margin: 0;
       }
     }
   }
