--- a/frontend/src/main/scss/app/menu/themes/_all.scss
+++ b/frontend/src/main/scss/app/menu/themes/_all.scss
@@ -17,7 +17,7 @@
 
     #contacts-menu {
       li {
-        font-size: 2rem;
+        font-size: 1.25rem;
       }
 
       .github {
@@ -42,7 +42,7 @@
 
   #theme-menu {
     span {
-      font-size: 1.5rem;
+      font-size: 1rem;
     }
 
     #choose-darkness {
